--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <script src="js/game.js"></script>
     <script>
         window.addEventListener('load', () => {
+            $sol.ui.setStage(document.getElementById('backstage'));
+            $sol.ui.setSlots({
+                slotKreuz: document.getElementById('slotKreuz'),
+                slotPik: document.getElementById('slotPik'),
+                slotHerz: document.getElementById('slotHerz'),
+                slotKaro: document.getElementById('slotKaro'),
+                closedHeap: document.getElementById('closedHeap'),
+                openHeap: document.getElementById('openHeap')
+            });
             $sol.game.init();
         })
     </script>
@@ -21,26 +30,8 @@
         <div class="tile slot" id="slotHerz"></div>
         <div class="tile slot" id="slotKaro"></div>
 
-        <div class="tile card heap" style="left:0px"></div>
-        <div class="tile card" style="left:120px"></div>
-
-        <div class="tile card cardBack" style="left:0px; top:200px;"></div>
-
-
-        <div class="tile card cardBack" style="left:120px; top:200px;"></div>
-        <div class="tile card cardBack" style="left:120px; top:235px;"></div>
-        <div class="tile card" style="left:120px; top:270px;"></div>
-
-        <div class="tile card" style="left:120px; top:305px;"></div>
-        <div class="tile card card3" style="left:120px; top:340px;"></div>
-        <div class="tile card card2" style="left:120px; top:375px;"></div>
-        <div class="tile card" style="left:120px; top:410px;"></div>
-
-        <div class="tile card" style="left:120px; top:445px;"></div>
-        <div class="tile card" style="left:120px; top:480px;"></div>
-        <div class="tile card card2" style="left:120px; top:515px;"></div>
-        <div class="tile card" style="left:120px; top:550px;"></div>
-        <div class="tile card card2" style="left:120px; top:585px;"></div>
+        <div class="tile card heap" id="closedHeap" style="left:0"></div>
+        <div class="tile card heap" id="openHeap" style="left:120px"></div>
     </div>
 </div>
 
