There was a space in image names, WTF!

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="tile card heap" id="closedHeap" style="left:0"></div>
         <div class="tile card heap" id="openHeap" style="left:120px"></div>
 
-        <div class="counterTile" id="counterTile">100</div>
+        <div class="counterTile" id="counterTile"></div>
     </div>
 </div>
 
