Should be the last push

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <title>Solitaire</title>
     <link rel="stylesheet" href="css/gameLayout.css">
+<!--    <script src="js/test.js"></script>-->
     <script src="js/constants.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/game.js"></script>
     <script>
+
         window.addEventListener('load', () => {
+            function formatNum(num) {
+                return num < 10 ? '0' + num : num;
+            }
             $sol.ui.setStage(document.getElementById('backstage'));
             $sol.ui.setSlots({
                 slotKreuz: document.getElementById('slotKreuz'),
@@ -18,10 +23,21 @@
                 closedHeap: document.getElementById('closedHeap'),
                 openHeap: document.getElementById('openHeap')
             });
-            $sol.game.init((num) => {
-                document.getElementById('counterTile').innerHTML = num;
+            $sol.game.init((nums) => {
+                document.getElementById('counterTile').innerHTML = formatNum(nums[0]) + '  | ' + formatNum(nums[1]);
+                document.getElementById('cashTile').innerHTML = nums[2] + '$';
             });
-        })
+        });
+
+        function confirmNewGame() {
+            if(confirm('Sure a new game?')) {
+                $sol.game.newGame();
+            }
+        }
+
+        function back() {
+            alert('not yet implemented');
+        }
     </script>
 </head>
 <body>
@@ -32,10 +48,16 @@
         <div class="tile slot" id="slotHerz"></div>
         <div class="tile slot" id="slotKaro"></div>
 
-        <div class="tile card heap" id="closedHeap" style="left:0"></div>
-        <div class="tile card heap" id="openHeap" style="left:120px"></div>
+        <div class="tile card heap" id="closedHeap"></div>
+        <div class="tile card heap" id="openHeap"></div>
 
-        <div class="counterTile" id="counterTile"></div>
+        <div class="tile adminWrapper">
+            <button id="nextGame" class="tile" onclick="confirmNewGame();">New Game</button>
+            <div class="tile counterTile" id="counterTile"></div>
+            <div class="tile counterTile" id="cashTile"></div>
+            <button id="back" class="tile" onclick="back();">Back</button>
+        </div>
+
     </div>
 </div>
 
