Ok, maybe this one

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="tile card heap" id="openHeap"></div>
 
         <div class="tile adminWrapper">
-            <button id="nextGame" class="tile" onclick="confirmNewGame();">New Game</button>
+            <button id="nextGame" class="tile addButton" onclick="confirmNewGame();">New Game</button>
             <div class="tile counterTile" id="counterTile"></div>
             <div class="tile counterTile" id="cashTile"></div>
-            <button id="back" class="tile" onclick="back();">Back</button>
+            <button id="back" class="tile addButton" onclick="back();">Back</button>
         </div>
 
     </div>
