--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
         }
 
         function back() {
-            alert('not yet implemented');
+            // alert('not yet implemented');
+            $sol.game.historyBack();
+        }
+
+        function fastForward() {
+            $sol.game.autoPushToTarget();
         }
     </script>
 </head>
@@ -52,10 +57,11 @@
         <div class="tile card heap" id="openHeap"></div>
 
         <div class="tile adminWrapper">
-            <button id="nextGame" class="tile addButton" onclick="confirmNewGame();">New Game</button>
+            <button id="nextGame" class="button" onclick="confirmNewGame();">New Game</button>
             <div class="tile counterTile" id="counterTile"></div>
             <div class="tile counterTile" id="cashTile"></div>
-            <button id="back" class="tile addButton" onclick="back();">Back</button>
+            <button id="back" class="button" onclick="back();"><span>&#8249;</span></button>
+            <button id="ff" class="button" onclick="fastForward();"><span>&#187;</span></button>
         </div>
 
     </div>
