--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/constants.js?4"></script>
     <script src="js/ui.js?4"></script>
     <script src="js/game.js?4"></script>
+    <script src="js/animator.js?4"></script>
     <script>
         window.addEventListener('load', () => {
             function formatNum(num) {
