Preparing the intelligence

--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Solitaire</title>
     <link rel="stylesheet" href="css/gameLayout.css?6">
+    <script src="js/test.js?6"></script>
     <script src="js/constants.js?6"></script>
     <script src="js/robot.js?1"></script>
     <script src="js/ui.js?6"></script>
