feat: open brain solitaire

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <body>
 <div>
     <div id="backstage">
+        <div id="openThumbs"></div>
         <div class="tile slot" id="slotKreuz"></div>
         <div class="tile slot" id="slotPik"></div>
         <div class="tile slot" id="slotHerz"></div>
