--- a/index.devel.html
+++ b/index.devel.html
@@ -45,7 +45,9 @@
 </head>
 <body>
 <div>
+
     <div id="backstage">
+        <div id="openThumbs"></div>
         <div class="tile slot" id="slotKreuz"></div>
         <div class="tile slot" id="slotPik"></div>
         <div class="tile slot" id="slotHerz"></div>
